--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+/*homeAdv comp*/
 .containerHomeAdv{
     width:430px ;
     height: 592px;
@@ -21,11 +22,6 @@
 }
 .navTitle{  margin: 0px;
     padding: 0px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 11px;
-    line-height: 13px;
 }
 .infoIcon{
     width: 25px;
@@ -43,17 +39,57 @@
     margin-top: 18px;
    
 }
-.homeBody section div{
-font-family: Montserrat;
-font-style: normal;
-font-weight: bold;
-font-size: 11px;
-line-height: 13px;
-}
 .homeBody section p{
     font-weight: 400 !important;
  line-height: 13.41px ;  
  vertical-align: center;
  margin-left: 15px;
  margin-top: 5px;
+}
+/*home card*/
+.containerCardHome{background:  linear-gradient(203deg, #0B3352 35.34%, rgb(255 255 255 / 29%) 69.93%), linear-gradient(157.64deg, #231A8C 0.57%, #8E2EBB 76.01%, #8E2EBB 92.02%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+position: absolute;
+width: 411px;
+height: 165px;
+left: 15px;
+top: 400px;
+
+}
+.Description{
+    color: white;
+font-weight: 600;
+font-size: 11px;
+line-height: 13px;
+margin-top: 7px;
+
+}
+.hr{
+    width: 100%;
+    border: 0.1px solid #BDBDBD;
+transform: rotate(-0.05deg);
+   margin: 0px;
+   height: 0px;
+    padding: 0px;
+}
+.footer{
+    display: flex;
+    flex-direction: row;
+}
+.faceImg{
+    width: 27px;
+height: 27px;
+background-blend-mode: normal;
+margin-top: 5px;
+box-sizing: border-box;
+border-radius: 16.5px;
+margin-left: 15px;
+margin-right: 10px;
+}
+.footer p{
+    width: 276px;
+height: 16px;
+color: #FFFFFF;
+margin-top: 2px;
 }
