--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,95 +1,196 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+.advPage {
+  padding-top: 40px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: space-evenly;
+}
 /*homeAdv comp*/
-.containerHomeAdv{
-    width:430px ;
-    height: 592px;
-    font-family: 'Montserrat',sans-serif;
-    font-weight: bold;
-    font-size: 11px;
-    border: 0.5px solid #BDBDBD;
-    box-sizing: border-box;
-    background-color: #EBED93;
+.containerHomeAdv {
+  width: 430px;
+  height: 592px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 11px;
+  border: 0.5px solid #bdbdbd;
+  box-sizing: border-box;
+  background-color: #ebed93;
+  flex: content;
 }
-.homeNav{display: flex;
-    width: 100%;
-    height: 35px;
-    background-color: #0B3352;
-    color:white;
-    align-items: center;
-    margin: 0px;
-    padding: 0px;
-   
+.homeNav {
+  display: flex;
+  width: 100%;
+  height: 35px;
+  background-color: #0b3352;
+  color: white;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
 }
-.navTitle{  margin: 0px;
-    padding: 0px;
+.navTitle {
+  margin: 0px;
+  padding: 0px;
 }
-.infoIcon{
-    width: 25px;
-    height: 25px;
-    margin-right: 10px;
-    margin-left: 7px;
-    margin-top: 6px;
+.infoIcon {
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+  margin-left: 7px;
+  margin-top: 6px;
 }
-.homeBody{
-    color: #5C5C5C;
-    width: 100%;
-    height: 100%;
-    margin-left: 15px;
-    margin-right: 30px;
-    margin-top: 18px;
-   
+.homeBody {
+  color: #5c5c5c;
+  width: 100%;
+  height: 100%;
+  margin-left: 15px;
+  margin-right: 30px;
+  margin-top: 18px;
 }
-.homeBody section p{
-    font-weight: 400 !important;
- line-height: 13.41px ;  
- vertical-align: center;
- margin-left: 15px;
- margin-top: 5px;
+.homeBody section p {
+  font-weight: 400 !important;
+  line-height: 13.41px;
+  vertical-align: center;
+  margin-left: 15px;
+  margin-top: 5px;
 }
 /*home card*/
-.containerCardHome{background:  linear-gradient(203deg, #0B3352 35.34%, rgb(255 255 255 / 29%) 69.93%), linear-gradient(157.64deg, #231A8C 0.57%, #8E2EBB 76.01%, #8E2EBB 92.02%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-position: absolute;
-width: 411px;
-height: 165px;
-left: 15px;
-top: 400px;
-
+.containerCardHome {
+  background: linear-gradient(
+      203deg,
+      #0b3352 35.34%,
+      rgb(255 255 255 / 29%) 69.93%
+    ),
+    linear-gradient(157.64deg, #231a8c 0.57%, #8e2ebb 76.01%, #8e2ebb 92.02%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  width: 411px;
+  height: 165px;
+  margin-left: -8px;
 }
-.Description{
-    color: white;
-font-weight: 600;
-font-size: 11px;
-line-height: 13px;
-margin-top: 7px;
-
+.Description {
+  color: white;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 13px;
+  margin-top: 7px;
 }
-.hr{
-    width: 100%;
-    border: 0.1px solid #BDBDBD;
-transform: rotate(-0.05deg);
-   margin: 0px;
-   height: 0px;
-    padding: 0px;
+.hr {
+  width: 100%;
+  border: 0.1px solid #bdbdbd;
+  transform: rotate(-0.05deg);
+  margin: 0px;
+  height: 0px;
+  padding: 0px;
 }
-.footer{
-    display: flex;
-    flex-direction: row;
+.footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
-.faceImg{
-    width: 27px;
-height: 27px;
-background-blend-mode: normal;
-margin-top: 5px;
-box-sizing: border-box;
-border-radius: 16.5px;
-margin-left: 15px;
-margin-right: 10px;
+.smfooter {
+  font-weight: 400;
+  margin-top: -5px;
 }
-.footer p{
-    width: 276px;
-height: 16px;
-color: #FFFFFF;
-margin-top: 2px;
+.faceImg {
+  width: 27px;
+  height: 27px;
+  background-blend-mode: normal;
+  box-sizing: border-box;
+  border-radius: 16.5px;
+  margin-left: 15px;
+  margin-right: 10px;
+}
+.footer p {
+  color: #ffffff;
+}
+.divfooter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.divfooter .smCard {
+  margin-top: -7px;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13px;
+  color: #ffffff;
+}
+/*add adv*/
+.addAdv {
+  width: 800px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 11px;
+}
+.sec1Add {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 15px;
+}
+.addDes .title,
+.addImg .title {
+  color: rgba(81, 81, 81, 0.85);
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.destext {
+  color: #0b3352;
+  font-weight: 400;
+  width: 393px;
+  height: 93px;
+  resize: none;
+  border: 0.5px solid #bdbdbd;
+  box-sizing: border-box;
+  border-radius: 5px;
+  margin-left: 15px;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+.addDes .small {
+  color: #9e9e9e;
+  text-align: right;
+  margin-right: 10px;
+  margin-top: 0px;
+}
+.imgdes {
+  color: rgba(158, 158, 158, 1);
+  font-size: 10;
+  font-weight: 500;
+}
+.imgUpload {
+  border-radius: 5px;
+  display: block;
+}
+.divimgUpload {
+  padding: 15px 13px 10px;
+  background: #ffffff;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  align-items: center;
+}
+.addimg {
+  width: 25px;
+  height: 25px;
+  margin: -7px -6px;
+}
+.btnPre {
+  color: white;
+  background-color: #09315b;
+  border-radius: 4px;
+  width: 102px;
+  height: 26px;
+  outline: none;
+  border: none;
+}
+.hrmarg {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.img2footer {
+  width: 30px;
+  height: 23.82px;
+  float: right;
 }
