--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -129,6 +129,18 @@
   flex-direction: row;
   justify-content: space-between;
   padding-left: 15px;
+  flex-wrap: wrap;
+}
+.sec2Add {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.sec2Add .addCard {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .addDes .title,
 .addImg .title {
@@ -184,6 +196,7 @@
   height: 26px;
   outline: none;
   border: none;
+  padding: 5px 10px;
 }
 .hrmarg {
   margin-top: 30px;
@@ -193,4 +206,65 @@
   width: 30px;
   height: 23.82px;
   float: right;
+}
+.addPlan {
+  background: #ebed93;
+  border: 1px solid #5e5c5c;
+  box-sizing: border-box;
+  margin-top: 20px;
+  width: 100%;
+  padding-bottom: 20px;
+}
+.addPlan > p {
+  margin-left: 15px;
+  color: rgba(11, 51, 82, 1);
+  font-weight: bold;
+}
+.addPlan .rideoBtn {
+  display: flex;
+  margin: auto;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.addPlan div p {
+  color: #4b4b4b !important;
+}
+.radio {
+  background: #ffffff;
+  border: 3px solid #c6c6c6;
+  box-sizing: border-box;
+  background-color: #c91919;
+}
+.cancel,
+.pay {
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  background-color: #c91919;
+  padding: 10px 20px;
+  margin-left: 10px;
+}
+.pay {
+  background-color: #0b3352 !important;
+  padding: 10px 45px !important;
+}
+.footerAdd {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+.footerAdd p {
+  color: rgba(81, 81, 81, 0.7);
+}
+@media only screen and (max-width: 1200px) {
+  .rideoBtn {
+    flex-direction: column;
+  }
 }
