--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -298,6 +298,9 @@
   margin-left: 5px;
   margin-right: 10px;
 }
+.divImg {
+  position: relative;
+}
 .cardHeadDet .date {
   font-style: normal;
   font-weight: 500;
@@ -343,8 +346,7 @@
   font-weight: 500;
   font-size: 10px;
   line-height: 12px;
-  margin-left: 5px;
-  margin-right: 25px;
+  margin-right: 15px;
 }
 .Cardicons div {
   display: flex;
@@ -418,4 +420,27 @@
   line-height: 11px;
   width: 50px;
   height: 18.2px;
+}
+
+.reactionimg {
+  width: 15px;
+  height: 15pxs;
+  position: absolute;
+  top: 8px;
+  left: 8px;
+}
+.numImg {
+  text-align: center;
+  position: absolute;
+  width: 21px;
+  height: 13px;
+  background-color: rgba(10, 62, 102, 1);
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 12px;
+  bottom: 26px;
+  left: 5px;
+  /* identical to box height */
+  color: white;
+  padding: 1px;
 }
